--- a/res/layout/activity_camera.xml
+++ b/res/layout/activity_camera.xml
@@ -9,8 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/abc_ab_bottom_solid_light_holo" />
+        android:layout_centerVertical="true"/>
+       <!--  android:src="@drawable/abc_ab_bottom_solid_light_holo"  -->
 
     <Button
         android:id="@+id/photo_butt"
