--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,31 +15,34 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
-        android:id="@+id/sensor_butt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/sensor_butt"
-        android:onClick="goSensor" />
-
-    <Button
         android:id="@+id/camera_butt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/sensor_butt"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
-        android:text="@string/camera_butt"
-        android:onClick="goCamera" />
+        android:layout_marginRight="69dp"
+        android:layout_marginTop="26dp"
+        android:onClick="goCamera"
+        android:text="@string/camera_butt" />
+
+    <Button
+        android:id="@+id/sensor_butt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/camera_butt"
+        android:layout_below="@+id/InfoText1"
+        android:layout_marginTop="22dp"
+        android:onClick="goSensor"
+        android:text="@string/sensor_butt" />
 
     <Button
         android:id="@+id/key_press_butt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/InfoText1"
-        android:layout_centerHorizontal="true"
-        android:text="@string/key_press_butt" 
-        android:onClick="goKeyPress"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/sensor_butt"
+        android:layout_marginLeft="66dp"
+        android:onClick="goKeyPress"
+        android:text="@string/key_press_butt" />
 
 </RelativeLayout>
