--- a/res/layout/activity_voice.xml
+++ b/res/layout/activity_voice.xml
@@ -8,4 +8,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.vuzix.m100empty.VoiceActivity" >
 
+    <TextView
+        android:id="@+id/voice_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/voice_butt"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
 </RelativeLayout>
